# prism-ai-backend

./: .dockerignore  .gitignore  AZURE_OPENAI_SETUP.md  DEVELOPMENT.md  DYNAMODB_RULES_TABLE.md  DYNAMODB_RULES_TABLE_SIMPLIFIED.md  Dockerfile  Dockerfile.fast  Dockerfile.poetry  Dockerfile.waitress  MISCELLANEOUS_TESTING_GUIDE.md  Makefile  PRODUCTION_DEPLOYMENT.md  PYTHON_SETUP.md  QUERY_INTENT_VERIFICATION_TODO.txt  README.md  WAITRESS_GUIDE.md  docker-compose.dev.yml  docker-compose.yml  docker.env.example  ecs-task-definition.json  pyproject.toml  pytest.ini  requirements-fixed.txt  requirements-minimal.txt  requirements.txt  setup.sh  test_env_example
.github/workflows/: ci-cd.yml  ecs-deploy.yml
app/: main.py  server.py
app/config/: llm_config.py
app/models/: __init__.py  recon_models.py  schemas.py  transformation_models.py
app/routes/: ai_assistance.py  delta_routes.py  delta_rules_router.py  file_routes.py  health_routes.py  miscellaneous_routes.py  miscellaneous_routes_v2.py  recent_results_routes.py  reconciliation_routes.py  regex_routes.py  rule_management_routes.py  save_results_routes.py  template_routes.py  tets.py  transformation_routes.py  unified_rules_router.py  viewer_routes.py
app/services/: __init__.py  delta_storage_service.py  dynamodb_rules_service.py  dynamodb_templates_service.py  enhanced_intent_service.py  file_service.py  intent_service.py  llm_service.py  miscellaneous_service.py  miscellaneous_service_v2.py  openai_service.py  process_analytics_service.py  reconciliation_service.py  smart_template_execution_service.py  storage_service.py  template_application_service.py  transformation_service.py
app/utils/: __init__.py  date_utils.py  financial_validators.py  global_thread_pool.py  parallel_cleaning.py  parallel_date_utils.py  threading_config.py  uuid_generator.py
build-scripts/: fast-build.sh
docs/: API_DOCUMENTATION.md  API_SCHEMAS.md  CLOSEST_MATCH_OPTIMIZATIONS.md  DELTA_ROUTES_API_DOCUMENTATION.md  DELTA_ROUTES_ARCHITECTURE_DOCUMENTATION.md  README.md  README_LLM_SERVICE_CLASS.md  RECON_CLOSEST_MATCH_DOCUMENTATION.md
test/: README_DATE_UTILS_TESTS.md  calculate_excel_dates.py  conftest.py  conftest_save_results.py  debug_excel_dates.py  debug_excel_upload.py  generate_date_test_data.py  run_date_utils_tests.py  run_tests.py  simple_date_test.py  test_date_utils_comprehensive.py  test_dummy.py  test_excel_date_normalization.py  test_file_routes.py  test_reconciliation_routes.py  test_running.py  test_save_results_routes.py  test_viewer_routes.py
test_docs/delta/: FINANCIAL_TRANSACTIONS_DELTA_TESTING.md  README.md  financial_transactions_new.csv  financial_transactions_old.csv
test_docs/file-processing/: README.md  fileA.csv  fileB.csv  sample_trades.csv
test_docs/reconciliation/: Comprehensive_Reconciliation_Test_Guide.md
test_docs/reconciliation/closest match feature/: FINAL_UPDATE_SUMMARY.md  RECONCILIATION_CLOSEST_MATCH_TESTING.md  UPDATE_SUMMARY.md  recon_test_file_a.csv  recon_test_file_b.csv  test_enhanced_closest_match.py  test_logging.py  test_performance_optimization.py  test_simplified_format.py
test_docs/reconciliation/closest match feature/new test/: CLOSEST_MATCH_TESTING_GUIDE.md  closest_match_file_a.csv  closest_match_file_b.csv
test_docs/transformation/: CUSTOMERS_TRANSFORMATION_TESTS.md  PRODUCTS_TRANSFORMATION_TESTS.md  PROMPT_BASED_TRANSFORMATION_TESTING.md  README.md  TRANSACTIONS_TRANSFORMATION_TESTS.md  TRANSFORMATION_TESTING_GUIDE.md  customers_test.csv  products_test.csv  simple_expression_test.py  test_account_summary_fix.py  test_automation.py  transactions_test.csv
